css/styles.css
/* ... */
@media (min-width: 768px) {
    .container {
        max-width: 768px;
        padding-left: 16px;
        padding-right: 16px;
    }

    .header-container {
        min-height: 72px;
    }

    .menu-toggle {
        display: none;
    }

    .nav {
        display: block;
        margin-left: 120px;
    }

    .header-address {
        display: block;
        margin-left: auto;
    }

    .address-list {
        flex-direction: column;
        gap: 12px;
    }

    .address-list a {
        padding: 0;
        font-size: 12px;
        line-height: 1.17;
    }

    .hero-section {
        max-width: 768px;
        padding-top: 112px;
        padding-bottom: 112px;
    }

    .hero-title {
        max-width: 496px;
        font-size: 56px;
        line-height: 1.07;
    }

    .hero-button-wrapper {
        margin-top: 36px;
    }

    .features-list {
        flex-direction: row;
        flex-wrap: wrap;
        gap: 72px 24px;
    }

    .features-item {
        width: calc((100% - 24px) / 2);
    }

    .section {
        padding-top: 96px;
        padding-bottom: 96px;
    }

    .features-icon {
        display: none;
    }

    .features-card h3 {
        text-align: left;
    }

    .team-section .container,
    .footer .container {
        max-width: 584px;
    }

    .footer {
        padding: 100px 0;
    }

    .team-list {
        flex-direction: row;
        flex-wrap: wrap;
        justify-content: center;
        gap: 64px 24px;
    }

    .team-list > li {
        width: calc((100% - 24px) / 2);
    }

    .portfolio-list {
        flex-direction: row;
        flex-wrap: wrap;
        gap: 72px 24px;
    }

    .portfolio-item {
        width: calc((100% - 24px) / 2);
    }

    .footer-container {
        flex-direction: row;
        flex-wrap: wrap;
        align-items: baseline;
        gap: 72px 24px;
    }

    .footer-content {
        margin-right: 0;
    }

    .footer-social {
        width: 208px;
    }

    .footer-subscribe {
        width: 100%;
        margin-left: 0;
    }

    .footer-content,
    .footer-social,
    .footer-subscribe {
        text-align: left;
    }

    .footer-social-icons {
        justify-content: flex-start;
    }

    .subscribe-form {
        flex-direction: row;
        gap: 24px;
    }

    .modal {
        width: 408px;
        min-height: 584px;
        max-height: calc(100vh - 48px);
    }

    .mobile-menu,
    .mobile-menu.is-open {
        display: none;
    }
}

@media (min-width: 1158px) {
    .container {
        max-width: 1158px;
        padding-left: 15px;
        padding-right: 15px;
    }

    .nav {
        margin-left: 76px;
    }

    .hero-section {
        max-width: 1440px;
        padding-top: 188px;
        padding-bottom: 188px;
    }

    .hero-button-wrapper {
        margin-top: 48px;
    }

    .section {
        padding-top: 120px;
        padding-bottom: 120px;
    }

    .address-list {
        flex-direction: row;
        gap: 40px;
    }

    .address-list a {
        font-size: 16px;
        line-height: 1.5;
    }

    .features-list {
        gap: 24px;
    }

    .features-item {
        width: calc((100% - 72px) / 4);
    }

    .features-icon {
        display: flex;
    }

    .features-card h3 {
        font-size: 20px;
        font-weight: 500;
        line-height: 1.2;
    }

    .features-card p {
        font-weight: 400;
    }

    .team-section .container,
    .footer .container {
        max-width: 1158px;
    }

    .team-list {
        gap: 24px;
    }

    .team-list > li {
        width: calc((100% - 72px) / 4);
    }

    .portfolio-list {
        gap: 48px 24px;
    }

    .portfolio-item {
        width: calc((100% - 48px) / 3);
        box-shadow: none;
    }

    .portfolio-item:hover {
        box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
    }

    .footer-container {
        flex-wrap: nowrap;
        gap: 0;
    }

    .footer-content {
        margin-right: 120px;
    }

    .footer-subscribe {
        width: auto;
        margin-left: auto;
    }
}

